# RigidBodyCoupling

./: .gitignore  CMakeLists.txt  README.md
src/common/: common.cpp  common.h
src/examples/: CMakeLists.txt  rigid_body_coupling.cpp
src/viewer/: CMakeLists.txt  viewer.cpp  viewer.h
src/viewer/imgui_impl_glfw_gl3/: imgui_impl_glfw_gl3.cpp
