cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)

project (RigidBodyCoupling)


# -----------------------------------------------------------------------------
# GLOBAL PROPERTY
# -----------------------------------------------------------------------------
set_property(GLOBAL PROPERTY USE_FOLDERS ON)


# -----------------------------------------------------------------------------
# GLOBAL VARIABLES
# -----------------------------------------------------------------------------
SET (BUILD_EXAMPLES
		ON CACHE BOOL "Build all examples?")
		
SET (BUILD_SHARED_LIBS
		OFF CACHE BOOL "Build libraries as dlls?")
	
	
# -----------------------------------------------------------------------------
# Parallel build on MSVC (all targets)
# -----------------------------------------------------------------------------
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")


# -----------------------------------------------------------------------------
# COMPILER OPTIONS
# ----------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 14)
		


# -----------------------------------------------------------------------------
# VIEWER
# -----------------------------------------------------------------------------
add_subdirectory(src/viewer viewer)


# -----------------------------------------------------------------------------
# SCENE
# -----------------------------------------------------------------------------
#add_subdirectory(src/scene)


# -----------------------------------------------------------------------------
# RENDERER
# -----------------------------------------------------------------------------
#add_subdirectory(src/renderer)


# -----------------------------------------------------------------------------
# EXAMPLES
# -----------------------------------------------------------------------------
add_subdirectory(src/examples examples)